--- a/website/index.html
+++ b/website/index.html
@@ -1,1 +1,19 @@
-<p>whats up world</p>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Document</title>
+</head>
+<body>
+    <label for="animal">Enter the name of your favorite animal</label>
+<input id="animal" name="animal">
+<textarea id="fav" placeholder="Enter your favorite thing about your favorite animal" rows="9" cols="50"></textarea>
+<button id = "generate">GO</button>
+<div id = "animalName"></div>    
+<div id = "animalFact"></div> 
+<div id = "animalFav"></div>
+<script src = "test.js" type = "text/javascript"></script>   
+</body>
+</html>
+
